fix spacing

--- a/css/main.css
+++ b/css/main.css
@@ -15,3 +15,7 @@ body{
     background-color:#ffffff;
     height:100%;
 }
+
+html{
+    scroll-behavior: smooth;
+}
